tdf#163319 Do not decrement destination position when moving a tab

to the right

Signed-off-by: Alin Andrei Abahnencei <alinandrei2004@gmail.com>
Change-Id: Id8da1a1b199927bb2f1b71b814737b8287ea2a34
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178362
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit e6d4af2a03f22de1493e00e497e081240bf8a5c4)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178799
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>